<working color picker>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mainContainer">
         <h1>Etch-A-Sketch</h1>
         <div class="buttons">
-            <button class="button color_picker">Color Picker</button>
+            <input type="color" class="color_picker"></input>
             <button class="button grid_toggle">Grid Toggle</button>
             <button class="button background_color">Background</button>
             <button class="button rainbow_mode">Rainbow</button>
