--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="mainContainer">
+    <div class="container">
         <h1>Etch-A-Sketch</h1>
         <div class="buttons">
             <input type="color" class="color_picker"></input>
@@ -24,6 +24,9 @@
 
         </div>
         <div class="board"></div>
+        <div class="rangeContainer">
+            <input type="range" min="1" max="32" class="slider" value="8" id="myRange">
+        </div>
     </div>
 
     
